# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1433 2010-09-24 09:49:15 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
3.0.0 beta4 2010-09-27
 - 2010-09-24 Fixed bug#5848 - Wrong characters in Czech language.
 - 2010-09-24 Updated Czech translation file, thanks to Pavel!
 - 2010-09-24 Fixed bug#5962 - ToolBarModule and TicketSearchProfile, management
    of search profiles is not working correctly.
 - 2010-09-23 Fixed bug#5950 - Customer History not shown in Change Customer View.
 - 2010-09-23 Changed ResponseFormat to TOFU (what people expect).
 - 2010-09-23 Fixed bug#3515 - AgentTicketMove standard "Note" and "Subject" cannot be configured.
 - 2010-09-23 Fixed bug#5965 - AgentTicketMove does not support setting of "Note" and "Subject".
 - 2010-09-23 Fixed bug#5999 - Undefined variables generate warning in CustomerTicketMessage.
 - 2010-09-23 Fixed bug#5980 - Free fields are not properly aligned.
 - 2010-09-23 Fixed bug#5983 - Outlook inline image is displayed in attachment list.
 - 2010-09-23 Fixed bug#5849 - Headline / Company Name is hardcoded in the DTL of the customer interface.
 - 2010-09-23 Fixed bug#5988 - ActionRow in customer interface displays incorrectly
    when zoomed, in Firefox/Webkit browser
 - 2010-09-23 Fixed bug#5995 - Pagination in Customer Interface does not work.
 - 2010-09-23 Fixed bug#5982 - Email address does not render properly if it
    contains braces.
 - 2010-09-23 Fixed bug#5987 - No column titles for ticket list in customer interface.
    This can now be configured with the config setting
    "Ticket::Frontend::CustomerTicketOverviewSortable".
 - 2010-09-22 Fixed bug#5964 - The given param 'klant@ykoon.xx' in 'WatchUserIDs' is
    invalid in customer panel!